# epie

./: .gitignore  LICENSE  Makefile  README  README.md  dhedf  epie.c  kilo.1  kilo.c  meson.build
logger/: logger.c  logger.h
src/: meson.build
src/epie/: ab.c  ab.h  editor.c  editor.h  erow.c  erow.h  fileio.c  fileio.h  find.c  find.h  highlight.c  highlight.h  input.c  input.h  logger.c  logger.h  main.c  meson.build  output.c  output.h  terminal.c  terminal.h
